--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
-node_modules
-.next
+# Node modules
+node_modules/
+
+# Build output
+.next/
+out/
+
+# Local env files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+jspm_packages/
+bower_components/
+
+# IDE specific files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Misc
+.DS_Store
+Thumbs.db
